# pairs_drone_inspection

./: .gitignore  LICENSE  README.md  test_sim.py
inspection_core/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
inspection_core/config/avoidance/: bumper.yaml  octomap_planner.yaml  octomap_server.yaml
inspection_core/config/bin_map/: generate_bin_map.py  warehouse_bins.yaml
inspection_core/config/localization/: custom_config.yaml  point_lio_mid360.yaml
inspection_core/config/rviz/: warehouse.rviz
inspection_core/launch/: avoidance.launch  inspection.launch  localization.launch  rviz.launch
inspection_core/scripts/: bin_map_recorder.py  inspection_gui  refactor_rviz_config.sh
inspection_core/src/inspection_core/: __init__.py  inspection_panel.py
inspection_real/: CMakeLists.txt  README.md  package.xml
inspection_real/config/: custom_config.yaml  network_config.yaml
inspection_real/config/apriltag/: apriltag_real.yaml
inspection_real/config/drivers/: MID360_config.json
inspection_real/config/worlds/: world_warehouse.yaml
inspection_real/launch/: apriltag.launch  avoidance.launch  bringup.launch  localization.launch  realsense_front.launch  sensors.launch
inspection_real/scripts/: install_system.sh  preflight_check.sh
inspection_real/system/chrony/: chrony-jetson.conf
inspection_real/system/netplan/: 01-inspection-net.yaml
inspection_real/system/systemd/: inspection.service
inspection_real/system/udev/: 99-inspection-sensors.rules
inspection_real/tmux/warehouse/: kill.sh  record.sh  start.sh
inspection_sim/gazebo_sim/inspection_gazebo/: CMakeLists.txt  README.md  package.xml
inspection_sim/gazebo_sim/inspection_gazebo/config/: settings.yaml  tags.yaml
inspection_sim/gazebo_sim/inspection_gazebo/launch/: apriltag.launch  full_sim.launch  simulation.launch
inspection_sim/gazebo_sim/inspection_gazebo/models/apriltag_marker/: model.config  model.sdf
inspection_sim/gazebo_sim/inspection_gazebo/models/apriltag_marker/materials/scripts/: Apriltag_marker.material  multi_tags.material
inspection_sim/gazebo_sim/inspection_gazebo/models/warehouse_rack/: generate_rack.py  model.config  model.sdf
inspection_sim/gazebo_sim/inspection_gazebo/scripts/: relative_navigator.py  spawn_inspection_uav.sh
inspection_sim/gazebo_sim/inspection_gazebo/tmux/warehouse/: kill.sh  start.sh
inspection_sim/gazebo_sim/inspection_gazebo/tmux/warehouse/config/: custom_config.yaml
inspection_sim/gazebo_sim/inspection_gazebo/worlds/: warehouse.world
inspection_sim/isaac_sim/: .gitignore  README.md  environment.isaac6.yml  environment.perception.yml  requirements-sim.txt
inspection_sim/isaac_sim/backend/: app.py  inspection.py  sap_mock.py  udp_bridge.py  visualize.py
inspection_sim/isaac_sim/deploy/: requirements-isaac6.txt  requirements-perception.txt
inspection_sim/isaac_sim/docs/: DEPLOY.md
inspection_sim/isaac_sim/docs/superpowers/: INSTALL_NOTES.md
inspection_sim/isaac_sim/docs/superpowers/plans/: 2026-06-05-m1-sim-environment.md  2026-06-06-m2-drone-navigation.md  2026-06-06-m3-perception.md
inspection_sim/isaac_sim/docs/superpowers/specs/: 2026-06-05-drone-warehouse-poc-design.md
inspection_sim/isaac_sim/drone/: avoidance.py  controller.py  flight.py  localization.py  quadrotor.py  waypoints.py
inspection_sim/isaac_sim/perception/: __init__.py  detector.py  ocr.py  pipeline.py  qr.py  types.py
inspection_sim/isaac_sim/scripts/: convert_drone_cad.py  download_assets.sh  fly_aisle_demo.py  fly_to_bin.py  live_sim.py  patch_isaac_kit.py  record_mission.py  render_all_bins.py  run_demo.sh  run_isaac.sh  run_live_demo.sh  setup_new_machine.sh  verify_assets.py  verify_capture.py  verify_isaac.py  verify_perception.py  verify_quadrotor.py  verify_scene.py  verify_warehouse_scene.py
inspection_sim/isaac_sim/sim/: README.md  bin_map.py  bin_map.yaml  config.py  drone_asset.py  gr_label.py  obstacles.py  rack.py  scene_builder.py  warehouse.py
inspection_sim/isaac_sim/tests/: test_avoidance.py  test_bin_map.py  test_controller.py  test_gr_label.py  test_inspection.py  test_obstacles.py  test_ocr_parse.py  test_pipeline.py  test_qr.py  test_sap_mock.py  test_udp_bridge.py  test_waypoints.py
inspection_sim/isaac_sim/ui/: app.js  index.html  style.css
inspection_sim/mujoco_sim/inspection_mujoco_demo/: README.md  download_assets.sh  run_demo.py
inspection_sim/mujoco_sim/inspection_mujoco_demo/models/: SM_CardBoxB_01_1051.mtl  SM_RackFrame_03.mtl  SM_RackShelf_01.mtl  scene.xml  warehouse.mtl
inspection_sim/mujoco_sim/inspection_mujoco_demo/src/: config.py  environment.py  simulation.py  ui.py
models/: scene.xml
packaging/: Dockerfile  build_deb.sh  make.sh
packaging/rosdep/: pairs.yaml
