<?xml version="1.0"?>
<package format="2">
  <name>inspection_core</name>
  <version>0.0.0</version>
  <description>
    Inspection-specific autonomy layer for the warehouse cycle-count drone: the semantic
    BIN map and (forthcoming) go-to-BIN mission logic that drive the PAIRS UAV system.
    Mirrors kr_autonomous_flight/autonomy_core in organisation; built on PAIRS technique.
  </description>

  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Mission node (added in the next step) calls the PAIRS ControlManager services. -->
  <exec_depend>rospy</exec_depend>
  <!-- bin_map_recorder (survey tool that emits warehouse_bins.yaml) -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <!-- optional features (anchors / QR auto-record); node degrades gracefully if absent -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <export>
  </export>
</package>
