<?xml version="1.0"?>
<package format="2">
  <name>inspection_core</name>
  <version>0.0.0</version>
  <description>
    Inspection-specific autonomy layer for the warehouse cycle-count drone: the semantic
    BIN map, the survey/mapping tools, and the rqt operator panel (relative rack/bin
    navigation + precise landing + live camera) that drive the PAIRS UAV system.
    Mirrors kr_autonomous_flight/autonomy_core in organisation; built on PAIRS technique.
  </description>

  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- rqt operator panel (inspection_core.inspection_panel.InspectionPanel) -->
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <exec_depend>rospy</exec_depend>
  <!-- bin_map_recorder (survey tool) + the rqt panel -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <!-- control_manager/goto service type (Vec4) used by the panel's navigation -->
  <exec_depend>pairs_msgs</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
